--- a/hyprland.conf
+++ b/hyprland.conf
@@ -6,8 +6,7 @@
 #  | _ \ |(_)((_|(_|(_)_\| |(_)((_)((_)/ _ \/ __|  
 #  |  _/ ' \/ _ (_-< '_ \) ' \/ _ \ '_| (_) \__ \  
 #  |_| |_||_\___/__/ .__/|_||_\___/_|  \___/|___/  
-#                |_|                                                                                                                         ███    ███                         
-#
+#                |_|                                                                                                                                                                  # Boo!
 # This file is not a full hyprland configuration.
 # It is intended to be included in your main hyprland.conf.
 
@@ -17,8 +16,8 @@
 #                                                     #
 #######################################################
 
-$activeBorderColor = rgb(11ff25) rgb(11ff25) rgb(11ff25) rgb(11ff25) rgb(11ff25) rgb(faff33) rgb(faff33) rgb(11ff25) rgb(11ff25) rgb(11ff25) 
-$inactiveBorderColor = rgba(faff0033)
+$activeBorderColor = rgb(faff33) rgb(11ff25) rgb(11ff25) rgb(11ff25) rgb(11ff25) rgb(11ff25) rgb(11ff25)
+$inactiveBorderColor = rgb(507350)
 
 general {
     col.active_border = $activeBorderColor
@@ -40,11 +39,24 @@ group {
 
 decoration {
     rounding = 4
+    active_opacity = 0.95
+    inactive_opacity = 0.85
+
     blur {
         enabled = true
         size = 2
-        passes = 2
+        passes = 3
+        vibrancy = 0.1
+        vibrancy_darkness = 0.75
     }
+    shadow {
+        enabled =true
+        range = 5
+        scale = 2.0
+        render_power = 2
+        color = rgba(11ff25dd)
+        color_inactive = rgba(507350dd)
+      }
 }
 
 #######################################################
@@ -61,9 +73,6 @@ animations {
     bezier = easeInOutQuant, 0.76, 0, 0.24, 1
     bezier = linear, 0, 0, 1, 1
     bezier = silk_drop, 0.28, 1.54, 0.70, 1
-
-    animation = border, 1, 3, silk_drop
-    animation = borderangle, 1, 68, linear, loop
 
     animation = workspaces, 1, 2.2, silk_drop, slidevert
     animation = fade, 1, 1.5, silk_drop
